--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_delivery_info_list.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_delivery_info_list.xml
@@ -7,7 +7,7 @@
     android:background="@color/white"
     android:orientation="vertical"
     android:splitMotionEvents="false">
-
+    <include layout="@layout/layout_top_bar"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerViewDeliveryInfo"
