--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_mark_delivery.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_mark_delivery.xml
@@ -7,6 +7,8 @@
     android:orientation="vertical"
     android:layout_centerHorizontal="true">
 
+    <include layout="@layout/layout_top_bar"/>
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="80px"
@@ -30,7 +32,7 @@
             android:paddingLeft="20px"
             android:paddingRight="20px"
             android:text="Order Id: 0000000"
-            android:textColor="@color/black"
+            android:textColor="@color/text_color"
             android:textSize="48px"/>
 
         <ImageView
