--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_delivery_info.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_delivery_info.xml
@@ -2,7 +2,7 @@
 <LinearLayout android:id="@+id/rootLinear"
               xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="wrap_content">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -85,13 +85,12 @@
             android:orientation="vertical">
 
             <RelativeLayout
-                android:id="@+id/driverPassengerCallRl"
+                android:id="@+id/relativeLayoutCall"
                 android:layout_width="230px"
                 android:layout_height="70px"
                 android:background="@drawable/orange_btn_selector">
 
                 <ImageView
-                    android:id="@+id/driverCallIcon"
                     android:layout_width="45px"
                     android:layout_height="45px"
                     android:layout_centerVertical="true"
@@ -99,7 +98,7 @@
                     android:src="@drawable/call_icon_selector"/>
 
                 <product.clicklabs.jugnoo.driver.utils.CustomTextVeiw
-                    android:id="@+id/driverPassengerCallText"
+                    android:id="@+id/textViewCall"
                     android:layout_width="150px"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
