--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_signin_otp.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_signin_otp.xml
@@ -24,54 +24,51 @@
             android:textSize="@dimen/button_text_size"/>
 
         <!--<TextView-->
-            <!--android:id="@+id/title"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_centerInParent="true"-->
-            <!--android:gravity="center"-->
-            <!--android:text="@string/login"-->
-            <!--android:textColor="@color/white"-->
-            <!--android:textSize="40px"/>-->
+        <!--android:id="@+id/title"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_centerInParent="true"-->
+        <!--android:gravity="center"-->
+        <!--android:text="@string/login"-->
+        <!--android:textColor="@color/white"-->
+        <!--android:textSize="40px"/>-->
 
-       <LinearLayout
-           android:id="@+id/selectLanguageLl"
-           android:layout_width="380px"
-           android:layout_height="80px"
-           android:layout_alignParentRight="true"
-           android:layout_marginTop="3px"
-           android:layout_marginRight="5px"
-           android:visibility="gone"
-           android:background="@drawable/background_white_rounded_orange_bordered">
-
-
-           <ImageView
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               android:layout_gravity="center"
-               android:layout_marginLeft="6px"
-               android:background="@drawable/language_icon"/>
-
-           <ImageView
-               android:layout_width="2px"
-               android:layout_height="match_parent"
-               android:layout_marginLeft="6px"
-               android:background="@color/new_orange"/>
+        <LinearLayout
+            android:id="@+id/selectLanguageLl"
+            android:layout_width="380px"
+            android:layout_height="80px"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="5px"
+            android:layout_marginTop="3px"
+            android:background="@drawable/background_white_rounded_orange_bordered"
+            android:visibility="gone">
 
 
-           <Spinner
-               android:id="@+id/language_spinner"
-               android:layout_width="match_parent"
-               android:layout_centerVertical="true"
-               android:layout_height="match_parent"
-               android:textAlignment="center"
-               android:popupBackground="@drawable/background_white_rounded_orange_bordered"
-               />
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginLeft="6px"
+                android:background="@drawable/language_icon"/>
+
+            <ImageView
+                android:layout_width="2px"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="6px"
+                android:background="@color/new_orange"/>
 
 
+            <Spinner
+                android:id="@+id/language_spinner"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_centerVertical="true"
+                android:popupBackground="@drawable/background_white_rounded_orange_bordered"
+                android:textAlignment="center"
+                />
 
 
-       </LinearLayout>
-
+        </LinearLayout>
 
 
     </RelativeLayout>
@@ -165,9 +162,9 @@
                     android:layout_marginLeft="10px"
                     android:layout_marginRight="2px"
                     android:layout_marginTop="2px"
-                    android:inputType="number"
                     android:background="@color/transparent"
                     android:hint="@string/otp"
+                    android:inputType="number"
                     android:singleLine="true"
                     android:textColor="@color/black"
                     android:textSize="34px"/>
@@ -236,7 +233,8 @@
             android:background="@drawable/orange_btn_selector"
             android:text="@string/GENERATE_OTP"
             android:textColor="@drawable/white_color_selector"
-            android:textSize="@dimen/button_text_size"/>
+            android:textSize="@dimen/button_text_size"
+            android:visibility="gone"/>
 
 
         <Button
@@ -246,20 +244,47 @@
             android:layout_marginTop="108px"
             android:background="@drawable/orange_btn_selector"
             android:text="@string/verify_me"
-            android:visibility="gone"
             android:textColor="@drawable/white_color_selector"
-            android:textSize="@dimen/button_text_size"/>
+            android:textSize="@dimen/button_text_size"
+            android:visibility="visible"/>
 
-        <Button
-            android:id="@+id/btnReGenerateOtp"
-            android:layout_width="648px"
-            android:layout_height="99px"
+        <LinearLayout
+            android:id="@+id/layoutResendOtp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginTop="108px"
-            android:background="@drawable/orange_btn_selector"
-            android:text="@string/resend_OTP"
-            android:visibility="gone"
-            android:textColor="@drawable/white_color_selector"
-            android:textSize="@dimen/button_text_size"/>
+            android:gravity="center_horizontal"
+            android:splitMotionEvents="false"
+            android:orientation="vertical">
+
+            <Button
+                android:id="@+id/btnReGenerateOtp"
+                android:layout_width="648px"
+                android:layout_height="99px"
+                android:background="@drawable/orange_btn_selector"
+                android:text="@string/resend_OTP"
+                android:textColor="@drawable/white_color_selector"
+                android:textSize="@dimen/button_text_size"
+                android:visibility="visible"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="48px"
+                android:text="@string/or"/>
+
+            <Button
+                android:id="@+id/btnOtpViaCall"
+                android:layout_width="648px"
+                android:layout_height="99px"
+                android:layout_marginTop="48px"
+                android:background="@drawable/orange_btn_selector"
+                android:text="@string/give_misscall_to_verify"
+                android:textColor="@drawable/white_color_selector"
+                android:textSize="@dimen/button_text_size"
+                android:visibility="visible"/>
+
+        </LinearLayout>
 
 
     </LinearLayout>
