--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_signin_otp.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_signin_otp.xml
@@ -228,7 +228,7 @@
         <Button
             android:id="@+id/btnGenerateOtp"
             android:layout_width="648px"
-            android:layout_height="99px"
+            android:layout_height="90px"
             android:layout_marginTop="108px"
             android:background="@drawable/orange_btn_selector"
             android:text="@string/GENERATE_OTP"
@@ -240,7 +240,7 @@
         <Button
             android:id="@+id/loginViaOtp"
             android:layout_width="648px"
-            android:layout_height="99px"
+            android:layout_height="90px"
             android:layout_marginTop="108px"
             android:background="@drawable/orange_btn_selector"
             android:text="@string/verify_me"
@@ -252,15 +252,16 @@
             android:id="@+id/layoutResendOtp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="108px"
+            android:layout_marginTop="98px"
             android:gravity="center_horizontal"
             android:splitMotionEvents="false"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:visibility="visible">
 
             <Button
                 android:id="@+id/btnReGenerateOtp"
                 android:layout_width="648px"
-                android:layout_height="99px"
+                android:layout_height="90px"
                 android:background="@drawable/orange_btn_selector"
                 android:text="@string/resend_OTP"
                 android:textColor="@drawable/white_color_selector"
@@ -268,16 +269,18 @@
                 android:visibility="visible"/>
 
             <TextView
+                android:id="@+id/textViewOr"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="48px"
+                android:layout_marginTop="42px"
+                android:textSize="32px"
                 android:text="@string/or"/>
 
             <Button
                 android:id="@+id/btnOtpViaCall"
                 android:layout_width="648px"
-                android:layout_height="99px"
-                android:layout_marginTop="48px"
+                android:layout_height="90px"
+                android:layout_marginTop="42px"
                 android:background="@drawable/orange_btn_selector"
                 android:text="@string/give_misscall_to_verify"
                 android:textColor="@drawable/white_color_selector"
@@ -285,7 +288,16 @@
                 android:visibility="visible"/>
 
         </LinearLayout>
-
+        <Button
+            android:id="@+id/btnLogin"
+            android:layout_width="348px"
+            android:layout_height="56px"
+            android:layout_marginTop="48px"
+            android:background="@drawable/orange_btn_selector"
+            android:text="@string/login"
+            android:textColor="@drawable/white_color_selector"
+            android:textSize="@dimen/button_text_size"
+            android:visibility="visible"/>
 
     </LinearLayout>
 
