--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_engaged.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_engaged.xml
@@ -26,8 +26,6 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="10px"
-                android:layout_marginTop="10px"
                 android:orientation="vertical">
 
                 <android.support.v7.widget.RecyclerView
@@ -288,6 +286,7 @@
             android:padding="15px"
             android:layout_marginBottom="10px"
             android:text="hello"
+            android:visibility="gone"
             />
 
 
