--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/drawable/new_orange_btn_corner_normal.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/drawable/new_orange_btn_corner_normal.xml
@@ -3,8 +3,5 @@
        android:shape="rectangle" >
 
 <solid android:color="@color/new_orange"/>
-<corners android:bottomRightRadius="@dimen/button_corner_radius"
-         android:bottomLeftRadius="0dp"
-         android:topLeftRadius="0dp"
-         android:topRightRadius="0dp"/>
+<corners android:radius="@dimen/button_corner_radius"/>
 </shape>
