--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/color.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/color.xml
@@ -12,7 +12,7 @@
    
    <color name="black_text_shop">#1C1C1C</color>
     <color name="nl_white_dark">#E0E0E0</color>
-
+    <color name="transparent_white">#50FFFFFF</color>
    
    <color name="white_translucent">#D8FFFFFF</color>
  <color name="white_light_dark">#EEEEEE</color>
