--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/drawable/list_white_inv_selector.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/drawable/list_white_inv_selector.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:drawable="@drawable/list_white_normal" android:state_focused="false" android:state_pressed="true"/>
+    <item android:drawable="@drawable/bg_white" android:state_focused="false" android:state_pressed="true"/>
     <item android:drawable="@drawable/list_white_pressed"/>
 
 </selector>
