--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_delivery_info.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_delivery_info.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:background="@drawable/list_white_selector"
+    android:background="@drawable/bg_white_grey_light_selector"
     >
 
     <LinearLayout
@@ -79,33 +79,50 @@
         </LinearLayout>
 
 
-        <RelativeLayout
-            android:id="@+id/relativeLayoutCall"
-            android:layout_width="230px"
-            android:layout_height="70px"
-            android:background="@drawable/orange_btn_selector"
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="20px"
             >
 
-            <ImageView
-                android:layout_width="45px"
-                android:layout_height="45px"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="35px"
-                android:src="@drawable/call_icon_selector" />
+            <RelativeLayout
+                android:id="@+id/relativeLayoutCall"
+                android:layout_width="230px"
+                android:layout_height="70px"
+                android:background="@drawable/orange_btn_selector"
+                >
 
-            <product.clicklabs.jugnoo.driver.utils.CustomTextVeiw
-                android:id="@+id/textViewCall"
-                android:layout_width="150px"
+                <ImageView
+                    android:layout_width="45px"
+                    android:layout_height="45px"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="35px"
+                    android:src="@drawable/call_icon_selector" />
+
+                <product.clicklabs.jugnoo.driver.utils.CustomTextVeiw
+                    android:id="@+id/textViewCall"
+                    android:layout_width="150px"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="115px"
+                    android:text="@string/call"
+                    android:textColor="@drawable/white_color_selector"
+                    android:textSize="42px" />
+            </RelativeLayout>
+
+            <TextView
+                android:id="@+id/textViewOrderStatus"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="115px"
-                android:text="@string/call"
-                android:textColor="@drawable/white_color_selector"
-                android:textSize="42px" />
-        </RelativeLayout>
+                android:layout_marginLeft="10px"
+                android:text=""
+                android:textColor="@color/bg_grey_opaque"
+                android:textSize="32px" />
 
+        </LinearLayout>
 
     </LinearLayout>
 
