--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_jugnoo_share.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_jugnoo_share.xml
@@ -5,7 +5,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/list_white_normal"
+    android:background="@drawable/bg_white"
     android:splitMotionEvents="false">
 
     <LinearLayout
